crates/fairy_dust/tests/trybuild/fail/app_mut_while_pending.rs
fn main() {
    let app = fairy_dust::sprinkle_example().app_mut();
    app.update();
}
